fix: shift the frontend to React

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body{
   width: 100vw;
   height: 100vh;
+}
+#root{
+  width: 100%;
+  height: 100%;
 }
